--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
+    "react-text-loop": "^2.2.1",
     "slugify": "^1.3.4"
   },
   "scripts": {
