--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "react-soundplayer": "^1.0.4",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.2.1",
     "slugify": "^1.3.6"
