--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@csstools/normalize.css": "^10.1.0",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
+    "react-audio-player": "^0.11.1",
     "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "react-soundplayer": "^1.0.4",
