--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@csstools/normalize.css": "^10.0.0",
     "classnames": "^2.2.6",
     "react": "^16.8.6",
+    "react-audio-player": "^0.11.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
+    "react-text-loop": "^2.2.1",
     "slugify": "^1.3.4"
   },
   "scripts": {
