--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@csstools/normalize.css": "^10.0.0",
     "classnames": "^2.2.6",
+    "git": "^0.1.5",
     "react": "^16.8.6",
     "react-audio-player": "^0.11.1",
     "react-dom": "^16.8.6",
