--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@csstools/normalize.css": "^10.0.0",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "git": "^0.1.5",
     "react": "^16.8.6",
+    "react-accessible-accordion": "^3.0.1",
     "react-audio-player": "^0.11.1",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
+    "react-light-accordion": "^0.1.4",
+    "react-newline-to-break": "^1.0.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
