--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "react-light-accordion": "^0.1.4",
+    "react-medium-image-zoom": "^3.1.2",
     "react-newline-to-break": "^1.0.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.2.1",
+    "simple-react-lightbox": "^2.0.5",
     "slugify": "^1.3.4"
   },
   "scripts": {
@@ -43,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
     "npm": "^6.13.3",
     "prettier": "^1.17.1"
   }
